# trayectoriasAfro

./: .env.example  .gitignore  CHANGELOG.md  METADATA_DICTIONARY_EN.md  METADATA_DICTIONARY_ES.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/: copilot-instructions.md
_devplan/: 052026-devplan.md
deposit/: network.html  network.ipynb  pyproject.toml
deposit/2026-05-08/: MANIFEST.txt  METADATA_DICTIONARY_EN.md  METADATA_DICTIONARY_ES.md  README.md  corporaciones.csv  documentos.csv  lugares.csv  metadata_elements.csv  personas_esclavizadas.csv  personas_no_esclavizadas.csv  relaciones_personas.csv  roles_evento_instituciones.csv  roles_evento_personas.csv  trayectorias.csv
deposit/2026-05-08/ControlledVocabularies/: cv_agencia_adaptacion.csv  cv_calidades.csv  cv_estado_matrimonial.csv  cv_etnonimos.csv  cv_ocupaciones.csv  cv_roles_evento.csv  cv_situaciones_lugar.csv  cv_tipos_documentales.csv  cv_tipos_institucion.csv  cv_tipos_lugar.csv
deposit/report/: report.json  report_aso.json  report_fam.json  report_sub.json  report_tmp.json
deposit/report/combined/: report.json
