[project]
name = "deposit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "pandas>=3.0.2",
    "rustworkx>=0.17.1",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "uv>=0.11.12",
]
